--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
 <style type="text/css">
 
 body {
-color:#000000;
+color:#800000;
 font-family:verdana, sans-serif;
-font-size:10pt;
-background:#FFFFFF;
+font-size:12pt;
+background:#FF0000;
 margin:0;
 padding:0;
 }
 
 a:link, a:visited {
-text-decoration:underline;
+text-decoration:none;
 color:#000000;
 }
 
 a:active, a:hover {
-text-decoration:underline;
-color:#888888;
+text-decoration:none;
+color:#99FF33;
 }
 
 img {
-border:0px;
+border:50px;
 }
 
 #header {
@@ -78,7 +78,7 @@ padding:0 5px;
 </head>
 <body>
 <div id="header">
-<img src="Your banner" alt="Your site name">
+<img src="Your banner" alt="Your web site">
 </div>
 
 <div id="container">
