Update my website

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 body {
 color:#000000;
 font-family:verdana, sans-serif;
-font-size:10pt;
+font-size:40pt;
 background:#FFFFFF;
 margin:0;
 padding:0;
@@ -83,9 +83,10 @@ padding:0 5px;
 
 <div id="container">
 <div id="content">
-<p>Put your content here.</p>
+<p>Hello I have a name. Henrald should be a name cause it sounds edgy. Are you really who you say you are. If not, contact me at ???????????</p>
 </div>
-
+<img src= "https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTGDTj6gmuYE1yNF2YCDZoRkB1_LQugz3Vw0YrA1jh-O6Zmv0yONZaOew" alt= "the mlg guy"
+     
 <div id="leftmenu">
 <ul>
 
