--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 body {
 color:#800000;
 font-family:verdana, sans-serif;
-font-size:12pt;
-background:#FF0000;
+font-size:40pt;
+background:#800000;
 margin:0;
 padding:0;
 }
@@ -78,14 +78,14 @@ padding:0 5px;
 </head>
 <body>
 <div id="header">
-<img src="Your banner" alt="Your web site">
+<img src="Your banner" alt="heeehheeee">
 </div>
 
 <div id="container">
 <div id="content">
-<p>Put your content here.</p>
+<p>hey there, henrald should be a name because it sounds edgy</p>
 </div>
-
+<img src= "https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTGDTj6gmuYE1yNF2YCDZoRkB1_LQugz3Vw0YrA1jh-O6Zmv0yONZaOew"
 <div id="leftmenu">
 <ul>
 
